fix dark mode login style issues (#681)

--- a/apps/app-article/src/index.css
+++ b/apps/app-article/src/index.css
@@ -812,6 +812,22 @@ html iframe {
     border:0;
 }
 
-.login.darkMode label{
+.login.darkMode label {
+    color:white;
+}
+
+.premiumSection.darkMode label {
+    color:white;
+}
+
+.premiumSection strong {
+    color:black;
+}
+
+.premiumSection.darkMode strong {
+    color:white;
+}
+
+.premiumSection.darkMode > .login-form.pt2 .center {
     color:white;
 }
